--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 body{
     background-image: url('http://cdn.wallpapersafari.com/89/39/MLfpHS.png');
+
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+    -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+    animation: fadein 2s;
 }
 .content{
     position:fixed;
@@ -9,8 +15,6 @@ body{
     height:18em;
     margin-top: -9em;
     margin-left: -15em;
-    /*border: 1px solid #ccc;*/
-    /*background-color: grey;*/
 }
 .avatar{
     margin-left: auto;
@@ -38,7 +42,7 @@ body{
     line-height: 28px;
 }
 .contact-btn{
-    background-color: #03a9f4; /* Green */
+    background-color: #03a9f4;
     border: none;
     color: white;
     padding: 10px 20px;
@@ -54,4 +58,79 @@ body{
     padding-left:7px;
     font-size: 25px;
     color:white;
+}
+
+/* Page Fade Effect */
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* jQuery UI Tooltip Design */
+.ui-tooltip, .arrow:after {
+    background: black;
+    border: 2px solid white;
+}
+.ui-tooltip {
+    padding: 10px 20px;
+    color: white;
+    border-radius: 20px;
+    font: bold 14px 'Roboto' , Sans-Serif;
+    box-shadow: 0 0 7px black;
+}
+.arrow {
+    width: 70px;
+    height: 16px;
+    overflow: hidden;
+    position: absolute;
+    left: 50%;
+    margin-left: -35px;
+    bottom: -16px;
+}
+.arrow.top {
+    top: -16px;
+    bottom: auto;
+}
+.arrow.left {
+    left: 20%;
+}
+.arrow:after {
+    content: "";
+    position: absolute;
+    left: 20px;
+    top: -20px;
+    width: 25px;
+    height: 25px;
+    box-shadow: 6px 5px 9px -9px black;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.arrow.top:after {
+    bottom: -20px;
+    top: auto;
 }
